--- a/.github/workflows/getstocks.yml
+++ b/.github/workflows/getstocks.yml
@@ -1,27 +1,45 @@
-name: Run Stocks Script
+name: Run and Push Stocks Script
 
 on:
-    schedule:
-        - cron: '0 10 * * *'
-    workflow_dispatch:
+  schedule:
+    - cron: '0 10 * * *'  # Runs every day at 10:00 AM UTC
+  workflow_dispatch:  # Allows manual trigger from the Actions tab
 
 jobs:
-    run-stocks-script:
-        runs-on: ubuntu-latest
+  run-stocks:
+    runs-on: ubuntu-latest
 
-        steps:
-            - name: Checkout repository
-                uses: actions/checkout@v2
+    steps:
+    # Step 1: Checkout the repository
+    - name: Checkout repository
+      uses: actions/checkout@v3
 
-            - name: Set up Python
-                uses: actions/setup-python@v2
-                with:
-                    python-version: '3.x'
+    # Step 2: Set up Python
+    - name: Set up Python
+      uses: actions/setup-python@v4
+      with:
+        python-version: '3.x' 
 
-            - name: Install dependencies
-                run: |
-                    python -m pip install --upgrade pip
-                    pip install -r requirements.txt
+    # Step 3: Install dependencies from requirements.txt
+    - name: Install dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
 
-            - name: Run stocks.py
-                run: python stocks.py
+    # Step 4: Run the stocks.py script
+    - name: Run stocks.py script
+      run: python stocks.py
+
+    # Step 5: Configure Git user for pushing changes
+    - name: Configure Git user
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "41898282+github-actions[bot]@users.noreply.github.com"
+
+    # Step 6: Commit and push changes (only if there are any)
+    - name: Commit and push changes
+      run: |
+        git add .
+        git commit -m "Auto-update from GitHub Actions run" || echo "No changes to commit"
+        git push
+      
