--- a/.github/workflows/getstocks.yml
+++ b/.github/workflows/getstocks.yml
@@ -28,7 +28,7 @@ jobs:
 
     # Step 4: Run the stocks.py script
     - name: Run stocks.py script
-      run: python stocks.py
+      run: python stocks/stocks.py
 
     # Step 5: Configure Git user for pushing changes
     - name: Configure Git user
