--- a/.github/workflows/getstocks.yml
+++ b/.github/workflows/getstocks.yml
@@ -5,6 +5,9 @@ on:
     - cron: '0 10 * * *'  # Runs every day at 10:00 AM UTC
   workflow_dispatch:  # Allows manual trigger from the Actions tab
 
+permissions:
+  contents: write
+  
 jobs:
   run-stocks:
     runs-on: ubuntu-latest
@@ -38,6 +41,8 @@ jobs:
 
     # Step 6: Commit and push changes (only if there are any)
     - name: Commit and push changes
+      env:
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
       run: |
         git add .
         git commit -m "Auto-update from GitHub Actions run" || echo "No changes to commit"
