--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,5 +12,5 @@ jobs:
               run: curl --version
             - name: Test wget
               run: wget --version
-            - name: Test brew
-              run: brew --version
+            - name: Test fortune
+              run: fortune
