added output path

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,3 +14,5 @@ jobs:
               run: wget --version
             - name: Test fortune
               run: fortune
+            - name: Output path
+              run: echo "$PATH"
