adjust path to the action

--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -12,7 +12,7 @@ jobs:
               run: curl --version
             - name: Test wget
               run: wget --version
-            - name: Test fortune
-              run: fortune
             - name: Output path
               run: echo "$PATH"
+            - name: Test fortune
+              run: /usr/games/fortune
