--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -14,5 +14,9 @@ jobs:
               run: wget --version
             - name: Output path
               run: echo "$PATH"
+            - name: Update APT
+              run: sudo apt-get update
+            - name: Install fortune
+              run: sudo apt-get install fortune
             - name: Test fortune
               run: /usr/games/fortune
