--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -1,14 +1,44 @@
-name: Check Software
+name: Fortune Cowsay Workflow
 
-on: workflow_dispatch
+on:
+  schedule:
+    - cron: '0 0 * * *' # Runs every day
+  workflow_dispatch: # Allows manual trigger
+
+permissions:
+  contents: write # Allows push access to the repository
 
 jobs:
-    check:
-        runs-on: ubuntu-latest 
-        steps:
-            - name: Update APT
-              run: sudo apt-get update
-            - name: Install fortune and cowsay
-              run: sudo apt-get install fortune cowsay
-            - name: Test fortune
-              run: /usr/games/fortune | /usr/games/cowsay
+  fortune-cowsay:
+    runs-on: ubuntu-latest
+
+    steps:
+    # Step 1: Checkout the repository
+    - name: Checkout Repository
+      uses: actions/checkout@v3
+
+    # Step 2: Set up the environment (install fortune and cowsay)
+    - name: Set up environment
+      run: |
+        sudo apt update
+        sudo apt install -y fortune cowsay
+        echo "PATH=$PATH:/usr/games" >> $GITHUB_ENV
+
+    # Step 3: Run fortune and cowsay, and save the output to a timestamped file
+    - name: Run fortune and cowsay
+      run: |
+        mkdir -p data/fortune
+        TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
+        fortune | cowsay > "data/fortune/${TIMESTAMP}.txt"
+        echo "Generated file: data/fortune/${TIMESTAMP}.txt"
+
+    # Step 4: Commit and push the changes
+    - name: Commit and Push
+      env:
+        TIMESTAMP: ${{ steps.run-fortune-cowsay.outputs.timestamp }}
+      run: |
+        git config --global user.name "github-actions[bot]"
+        git config --global user.email "github-actions[bot]@users.noreply.github.com"
+        git add data/fortune/${TIMESTAMP}.txt
+        git commit -m "Added fortune file: ${TIMESTAMP}.txt"
+        git push
