--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -27,10 +27,7 @@ jobs:
     # Step 3: Run fortune and cowsay, and save the output to a timestamped file
     - name: Run fortune and cowsay
       run: |
-        mkdir -p data/fortune
-        TIMESTAMP=$(date +"%Y%m%d_%H%M%S")
-        fortune | cowsay > "data/fortune/${TIMESTAMP}.txt"
-        echo "Generated file: data/fortune/${TIMESTAMP}.txt"
+        fortune | cowsay > data/fortune/`date +"%Y%m%d_%H%M%S".txt`
 
     # Step 4: Commit and push the changes
     - name: Commit and Push
@@ -39,6 +36,6 @@ jobs:
       run: |
         git config --global user.name "github-actions[bot]"
         git config --global user.email "github-actions[bot]@users.noreply.github.com"
-        git add data/fortune/${TIMESTAMP}.txt
-        git commit -m "Added fortune file: ${TIMESTAMP}.txt"
+        git add data/fortune/`date +"%Y%m%d_%H%M%S".txt`
+        git commit -m "Added fortune file: `date +"%Y%m%d_%H%M%S".txt`"
         git push
